hphp/hack/test/typecheck/strict_switch/nullable_bool.php.exp
File "nullable_bool.php", line 26, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `false` (Typing[4019])
